[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../compiler" }
inkwell = { version = "0.4.0", features = ["llvm17-0"] }

[[bin]]
name = "cli"
path = "src/main.rs"
